# w2-webapp-api

./: .env  Cargo.toml  Englisg.postman_collection.json  docker-compose.yml  readme.md
migrations/: 20250218143209_init.sql
sql/: init.sql
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/auth/: login.rs  mod.rs  register.rs
src/api/exam/: create_test.rs  delete_test.rs  list_tests.rs  mod.rs  update_test.rs
src/api/exam/question/: create_question.rs  delete_question.rs  get_question_part.rs  mod.rs  update_question.rs
src/api/exam/test_result/: mod.rs  submit_test.rs  (+1 more)
src/api/noti/: mod.rs
src/api/template/: create_template.rs  delete_template.rs  get_all_templates.rs  get_detail_template.rs  mod.rs  update_template.rs
src/api/user/: user_info.rs
src/common/: error.rs  jwt.rs  mod.rs  utils.rs
src/common/kafka/: consumer.rs  mod.rs  producer.rs
src/common/response/: mod.rs  page.rs  res.rs
src/consumer/: mod.rs  notification_handler.rs
src/function/: auth.rs  exam.rs  mod.rs  notification.rs  template_notification.rs  user.rs
src/job/: job_handler.rs  mod.rs
src/middleware/: authentication.rs  authorization.rs  mod.rs
src/model/: mod.rs  request.rs
src/model/entity/: mod.rs  notification.rs  otp.rs  question.rs  template_notification.rs  tests.rs  user.rs  user_test.rs
src/model/req/: auth.rs  exam.rs  mod.rs  notification.rs  template_notification.rs
src/model/res/: auth.rs  exam.rs  mod.rs  notification.rs  template_notification.rs  user.rs
src/repo/: exam.rs  mod.rs  notification.rs  template.rs  user.rs
src/repo/redis/: mod.rs
