[package]
name = "w4"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
regex = { version = "1.11.1", features = [] }
axum = "0.7.5"
thiserror = "2.0.11"
tower = "0.4.13"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = {version="0.3.19", features=["env-filter"]}
tracing-appender = "0.2"
#anyhow = {workspace = true, features = ["backtrace"]}
anyhow = "1.0"
sqlx-template = { git = "https://github.com/hn63wospuvy/sqlx-template", features = [
    "postgres",
    "tracing",
] }
sqlx = { version = "0.8.3" ,features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono",
] }
once_cell = "1.20.3"
http = "1.2.0"

jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
redis = { version = "0.29.0", features = ["tokio-comp", "connection-manager"] }
openssl-sys = "0.9"
openssl = "0.10"
kafka = "0.9.0"

#rdkafka = { version = "0.37.0", features = ["tokio", "cmake-build"] }
log = "0.4.25"
tokio-cron-scheduler = "0.9"
